
3.90  2013-03-13
  - Added direct array access for parsed parameters to Mojo::Parameters.
  - Added direct array access for path parts to Mojo::Path.
  - Improved dumper helper to sort hash keys.
  - Improved documentation.
  - Improved tests.
  - Fixed bug in Mojo::Headers that prevented multiline headers from being
    parsed correctly.

3.89  2013-03-04
  - Improved documentation.
  - Improved tests.
  - Fixed installable scripts to not "use lib", which sadly breaks updated
    dual-life modules. (jberger, sri)
  - Fixed bug preventing delayed normalization for reused Mojo::Path objects.
  - Fixed path matching bug in Mojo::Path.

3.88  2013-03-03
  - Improved Mojo::Path to delay normalization as long as possible.
  - Improved Mojo::Path performance.
  - Improved documentation.
  - Improved tests.
  - Fixed small domain detection bug in Mojo::UserAgent::CookieJar.

3.87  2013-02-23
  - Added deprecated function to Mojo::Util. (marcus)
  - Removed deprecated render_content helper.
  - Improved documentation.
  - Improved tests.

3.86  2013-02-22
  - Welcome to the Mojolicious core team Joel Berger.
  - Improved portability of Mojo::Asset::File tests.
  - Improved documentation.
  - Improved tests. (jberger, sri)
  - Fixed path generation bug in Mojolicious::Routes::Pattern. (jberger)
  - Fixed small domain detection bug in Mojo::UserAgent::CookieJar.
    (dione, sri)
  - Fixed comment lines in Mojo::Template to cover the whole line.

3.85  2013-02-13
  - Deprecated Mojo::UserAgent::build_form_tx in favor of
    Mojo::UserAgent::build_tx.
  - Deprecated Mojo::UserAgent::build_json_tx in favor of
    Mojo::UserAgent::build_tx.
  - Deprecated Mojo::UserAgent::post_form in favor of Mojo::UserAgent::post.
  - Deprecated Mojo::UserAgent::post_json in favor of Mojo::UserAgent::post.
  - Deprecated Mojo::UserAgent::Transactor::form in favor of
    Mojo::UserAgent::Transactor::tx.
  - Deprecated Mojo::UserAgent::Transactor::json in favor of